# snippet-service

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
prompts/: artifact_discipline.md  coding_agent_layer.md  conversation_agent_layer.md  operating_style.md  sandbox_environment.md
prompts/runtime/: artifact_discipline.md  operating_style.md  sandbox_environment.md
src/: anthropic.rs  bg.rs  builtins.rs  catalog.rs  chatgpt.rs  chatgpt_auth.rs  checkpoint.rs  config.rs  gemini.rs  harness.rs  inline.rs  lane_log.rs  lanes.rs  lib.rs  llm.rs  locks.rs  main.rs  memory.rs  meta.rs  openai.rs  outline.rs  prompts.rs  replay.rs  sanitize.rs  serve.rs  session.rs  shell_guard.rs  signals.rs  skills.rs  sse.rs  tools.rs  tui.rs  update.rs  vault.rs  watches.rs  xai_auth.rs
src/serve/: browser.rs  fs.rs  git.rs  lifecycle.rs  mod.rs  transcribe.rs  tunnel.rs
src/tui/: markdown.rs  mod.rs  theme.rs  transcript.rs
tests/: replace_file_content.rs  search_smoke.rs  skills_smoke.rs
