[package]
name = "snippet"
version = "0.2.1"
edition = "2024"
description = "A Rust TUI coding agent with a headless, remote-controllable serve daemon."
license = "AGPL-3.0-or-later"
repository = "https://github.com/wacht-platform/snippet-service"
readme = "README.md"
keywords = ["agent", "tui", "coding", "llm", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
qrcode = "0.14"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
daemonize = "0.5"
crossterm = "0.28"
futures-util = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json", "stream"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
flate2 = "1.0"
tar = "0.4"
tokio-util = { version = "0.7", features = ["io"] }
rmp-serde = "1.3"
ignore = "0.4"
# Multi-language structural parsing for view_outline / code_map.
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"

[dev-dependencies]
tempfile = "3"
